--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Marc Labrecque
 
 # Short bio or description (displayed in the header)
-description: Nerd from planet Earth
+description: Another nerd from planet Earth
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/16921266?s=460u=3389d520cab2f99137c46c4162eccf15f5d2f3b6&v=4
