--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://avatars2.githubusercontent.com/u/16921266?s=460u=3389d520cab2f99
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: mlabrecque@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: MarcLab1
   instagram:
   linkedin:
   pinterest:
