--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://avatars2.githubusercontent.com/u/16921266?s=460u=3389d520cab2f99
 footer-links:
   dribbble:
   email: mlabrecque@gmail.com
-  facebook:
+  facebook: https://www.facebook.com/My-Lyme-Journal-512255922487125/
   flickr:
   github: MarcLab1
   instagram:
