--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: MarcLab
+name: MarcLab1
 
 # Short bio or description (displayed in the header)
 description: Another nerd from planet Earth
